# src/server/controllers/digestController.ts
@@ -1,5 +1,5 @@
 import { Base64 } from "../../types/common"
-import { Body, Request, Controller, Post, Route } from "tsoa"
+import { Body, Controller, Post, Route } from "tsoa"
 import { DssClient } from "../../dss/dssClient"
 import { ESignatureLevel, ESignaturePackaging, IGetDataToSignRequest } from "../../dss/types"
 import { IDigestBlobRequest, IDigestBlobResponse, IDigestPDFRequest, IDigestPDFResponse } from "./types"
@@ -11,7 +11,7 @@ export class DigestController extends Controller {
      * Returns the base64 encoded digest of a base64 encoded sequence of bytes.
      */
     @Post("blob")
-    public async digestBlob(@Body() body: IDigestBlobRequest, @Request() request: any): Promise<IDigestBlobResponse> {
+    public async digestBlob(@Body() body: IDigestBlobRequest): Promise<IDigestBlobResponse> {
         // TODO: Validate base64
         const requestData: IGetDataToSignRequest = {
             parameters: {
@@ -28,15 +28,15 @@ export class DigestController extends Controller {
         if (getDataToSignRes.isErr()) {
             throw getDataToSignRes.error
         }
-        const xmldsig = getDataToSignRes.value.bytes
+        const xmldsig = Buffer.from(getDataToSignRes.value.bytes, "base64").toString("utf8")
         const digest: Base64 = await DssClient.getDigestValueFromXmldsig(xmldsig)
         const response: IDigestBlobResponse = { bytes: digest }
         return response
     }
 
-    // @Post("pdf")
-    // public async DigestPDF(@Body() request: IDigestPDFRequest): Promise<IDigestPDFResponse> {
-    //     // FIXME: Bogus implementation
-    //     return await this.digestBlob(request)
-    // }
+    @Post("pdf")
+    public async DigestPDF(@Body() request: IDigestPDFRequest): Promise<IDigestPDFResponse> {
+        // FIXME: Bogus implementation
+        return await this.digestBlob(request)
+    }
 }
